jdk-21 up and running